<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    android:gravity="start"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@drawable/ibg"
        >
        <ImageView
            android:id="@+id/coverId"
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:contentDescription="TODO"
            android:src="@drawable/cover"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_below="@id/coverId"
        android:layout_marginBottom="10dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginHorizontal="10dp"
        android:paddingTop="10dp"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/button_1Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_1"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_2Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_2"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />


        <Button
            android:id="@+id/button_3Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_3"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_4Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_4"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_5Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_5"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_6Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_6"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_7Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_7"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_8Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_8"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_9Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_9"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_10Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_10"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_11Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_11"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_12Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_12"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_13Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_13"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_14Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_14"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_15Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_15"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_16Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_16"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_17Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_17"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_18Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_18"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_19Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_19"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_20Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_20"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_21Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_21"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_22Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_22"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_23Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_23"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_24Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_24"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_25Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_25"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_26Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_26"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_27Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_27"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />

        <Button
            android:id="@+id/button_28Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_28"
            android:textAlignment="center"
            android:fontFamily="@font/bangla"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/bg_button_style"
            />
    </LinearLayout>
    </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center_horizontal"
            android:paddingStart="15dp"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            android:paddingEnd="15dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageMenu"
                android:src="@drawable/ic_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                app:tint="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/textTitle"
                android:layout_marginStart="15dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:fontFamily="@font/bangla"
                android:textStyle="bold"/>

        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navmenuId"
        app:menu="@menu/navmenu"
        app:headerLayout="@layout/navheader"
        android:layout_gravity="start"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        app:itemTextAppearance="@font/bangla"
        app:itemTextAppearanceActiveBoldEnabled="true"
        >
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>